err/enpraxis.leftskin.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/enpraxis'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/browser'...
Compiling './lib/python3.5/site-packages/enpraxis/leftskin/browser/schema.py'...
***   File "./lib/python3.5/site-packages/enpraxis/leftskin/browser/schema.py", line 34
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/enpraxis/leftskin/browser/widgets.py'...
***   File "./lib/python3.5/site-packages/enpraxis/leftskin/browser/widgets.py", line 37
    except AttributeError, e:
                         ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/enpraxis/leftskin/docs'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/docs/images'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/docs/src'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/af'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/af/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ar'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ar/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/bn'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/bn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ca'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ca/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/de'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/de/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/en'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/en/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/es'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/es/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/fr'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/fr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/hi'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/hi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/hu'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/hu/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/it'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/it/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ja'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ja/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ko'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ko/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ne'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ne/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/nl'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/nl/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/pt'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/pt/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/pt-br'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/pt-br/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ru'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/ru/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/tr'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/tr/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/vi'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/vi/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-cn'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-cn/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-hk'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-hk/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-tw'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/locales/zh-tw/LC_MESSAGES'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/profiles'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/profiles/default'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins/colorpicker'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins/colorpicker/css'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins/colorpicker/images'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins/colorpicker/js'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/skins/leftskin'...
Listing './lib/python3.5/site-packages/enpraxis/leftskin/tests'...
Listing './lib/python3.5/site-packages/enpraxis.leftskin-2.5.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
